--- a/ckanext/nhm/theme/less/variables.less
+++ b/ckanext/nhm/theme/less/variables.less
@@ -68,3 +68,4 @@
 @margin-search: 20px;
 @min-pad: 15px;
 @rounding: 2px;
+@footer-size: 300px;
